--- a/setup/inventory.ini
+++ b/setup/inventory.ini
@@ -1,5 +1,5 @@
 [jenkins]
-master ansible_host="127.0.0.1" ansible_connection="ssh" ansible_port="22"
+master ansible_host=localhost
 
 [jenkins:vars]
 jenkins_version=2.375.3
