--- a/setup/tasks/docker.yml
+++ b/setup/tasks/docker.yml
@@ -7,6 +7,7 @@
     - docker-ce-cli
     - containerd.io
     - docker-buildx-plugin
+    - docker-compose
     - docker-compose-plugin
 
 - name: Configure Docker to start on boot with systemd
