--- a/setup/tasks/python.yml
+++ b/setup/tasks/python.yml
@@ -1,6 +1,5 @@
 - name: Prepare requirements.txt
   become: true
-  become_user: "{{ default_user }}"
   template:
     src: "../templates/requirements.txt.j2"
     dest: "/home/{{ default_user }}/requirements.txt"
@@ -9,6 +8,8 @@
     mode: 0644
 
 - name: Install Python dependencies
+  become: true
+  become_user: "{{ default_user }}"
   pip:
     requirements: "/home/{{ default_user }}/requirements.txt"
     virtualenv: "/home/{{ default_user }}/venv"
